--- a/header.html
+++ b/header.html
@@ -19,6 +19,14 @@
 
   gtag('config', 'G-E4LBQ5G4KE');
 
-<!-- /wp:html --></header>
+<!-- /wp:html --> <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E4LBQ5G4KE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E4LBQ5G4KE');
+</script></header>
 <!-- /wp:group --></div>
 <!-- /wp:group -->
